about me, info and demo pages added

--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -59,12 +59,29 @@
         <p>The Holidays</p>
       </div>
       <div id="img-6">
-        <img src="../img/patio.jpg" class="img-fluid image-left" alt="Responsive image">
-        <p>Spending time outside</p>
+        <img src="../img/halloween.jpg" class="img-fluid image-right" alt="Responsive image">
+        <p>Entertaining during the Holidays</p>  
       </div>
       <div id="img-7">
-        <img src="../img/halloween.jpg" class="img-fluid image-right" alt="Responsive image">
-        <p>Entertaining during the Holidays</p>
+        <img src="../img/patio.jpg" class="img-fluid image-left" alt="Responsive image">
+        <p>Spending time outside</p> 
+      </div>
+    </div>
+
+    <h4 id="cook-header">And I love to cook <i>(and eat...)</i></h4>
+
+    <div class="images">
+      <div id="img-8">
+        <img src="../img/bread.jpg" class="img-fluid image-left" alt="Responsive image">
+      </div>
+      <div id="img-9">
+        <img src="../img/chicken.jpg" class="img-fluid image-right" alt="Responsive image"> 
+      </div>
+      <div id="img-10">
+        <img src="../img/smoker.jpg" class="img-fluid image-left" alt="Responsive image">
+      </div>
+      <div id="img-11">
+        <img src="../img/filet.jpg" class="img-fluid image-right" alt="Responsive image">
       </div>
     </div>
  
