--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,11 @@ ul {
     width: 200px;
 }
 
-#img-1, #img-3 {
+#img-1, #img-3, #img-5, #img-9, #img-11 {
     transform: rotate(20deg);
 }
 
-#img-2, #img-4 {
+#img-2, #img-4, #img-7, #img-8, #img-10 {
     transform: rotate(-15deg);
 }
 
@@ -125,4 +125,24 @@ ul {
 #joy-header {
     margin-top: 20px;
     margin-bottom: 30px;
+}
+
+#img-6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#img-6:hover {
+    transform: rotate(20deg) scale(1.5);
+}
+
+#img p:hover {
+    transform: rotate(0deg);
+}
+
+#cook-header {
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
