--- a/views/demo.html
+++ b/views/demo.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style1.css">
     <title>Module 1: The Demo</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');</style>
     <style>@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');</style>
   </head>
   <body>
-      <h1>The DEMO</h1>
+      <h1>The DEMO:</h1>
+      <div id="demo">
+        <a href="https://b0zzw3ll.github.io/Module-1-Project-Game/" target="_blank">Here</a>
+      </div>
   </body>
 </html> 
