--- a/views/gameinfo.html
+++ b/views/gameinfo.html
@@ -4,12 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style1.css">
     <title>Module 1: Game Info</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');</style>
     <style>@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');</style>
   </head>
   <body>
-      <h1>Brief Game Info</h1>
+      <h1><u>BreanZ BreakFast:</u></h1>
+
+      <div id="what-is-it">
+        <h2>What is it:</h2>
+        <p>A basic "object avoidance" game... Simply move your player left or right collecting the objects you want and avoiding those you don't.</p>
+      </div>
+
+      <div id="challenges">
+        <div>
+          <h2>Challenges:</h2>
+        </div>
+   
+      </div>
+
+      <div id="mistakes">
+        <div>
+          <h2>Mistakes:</h2>
+        </div>
+      </div>
+
+
   </body>
 </html> 
