--- a/views/gameinfo.html
+++ b/views/gameinfo.html
@@ -20,8 +20,9 @@
       <div id="challenges">
         <div>
           <h2>Challenges:</h2>
+          <p>Object collision & ending the animations...</p>
+          <canvas id="game-space" height="200px" width="1000px"></canvas>
         </div>
-   
       </div>
 
       <div id="mistakes">
@@ -30,6 +31,6 @@
         </div>
       </div>
 
-
+      <script type="text/javascript" src="../js/canvas.js"></script>
   </body>
 </html> 
