--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,16 @@ p {
     text-align: center;
 }
 
-ul {
+#page-links {
     display: flex;
     justify-content: center;
+}
+
+ul {
+    display: flex;
+    justify-content: space-evenly;
     list-style: none;
+    width: 800px;
 }
 
 #page-links a {
@@ -52,7 +58,6 @@ ul {
     border: 4px solid rgba(227, 214, 214, 0.846);
     border-radius: 5px;
     color: rgba(227, 214, 214, 0.846);
-    margin: 0px 80px 0px 80px;
     padding: 10px 20px 10px 20px;
     background-color: rgba(249, 246, 246, 0.112);
     box-shadow: 2px 4px 8px 8px #000000;
