--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -11,6 +11,13 @@
   </head>
   <body>
 
+    <nav id="nav-bar">
+      <ul>
+        <li><a href="../index.html" >Home</a></li>
+        <li><a href="../views/gameinfo.html">Project Info</a></li>
+        <li><a href="../views/demo.html">The Demo</a></li>
+      </ul>
+    </nav>
 
     <div>
       <h2>ABOUT ME:</h2>
@@ -19,7 +26,7 @@
 
 
     <div class="images" id="map-image">
-      <img src="../img/enfieldmap.png" class="img-fluid" alt=""Responsive image"">
+      <img src="../img/enfieldmap.png" class="img-fluid" alt="Responsive image">
     </div>
 
 
@@ -42,10 +49,8 @@
       </div>
     </div>
 
-
     <h4>All-Time Favorite Movie:</h4>
     <h5>National Lampoon's Christmas Vacation</h5>
-
 
     <div id="middle-section">
       <img src="../img/christmasvacation.jpg" class="img-fluid" alt="Responsive image">
@@ -68,7 +73,7 @@
       </div>
     </div>
 
-    <h4 id="cook-header">And I love to cook <i>(and eat...)</i></h4>
+    <h4 id="cook-header">I love to cook <i>(and eat...)</i></h4>
 
     <div class="images">
       <div id="img-8">
@@ -84,21 +89,6 @@
         <img src="../img/filet.jpg" class="img-fluid image-right" alt="Responsive image">
       </div>
     </div>
- 
-    
-  
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body> 
 </html> 
