--- a/views/demo.html
+++ b/views/demo.html
@@ -10,6 +10,15 @@
     <style>@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');</style>
   </head>
   <body>
+
+    <nav id="nav-bar">
+      <ul>
+        <li><a href="../index.html" >Home</a></li>
+        <li><a href="../views/aboutme.html">About Me</a></li>
+        <li><a href="../views/gameinfo.html">Project Info</a></li>
+      </ul>
+    </nav>
+
       <h1>The DEMO:</h1>
       <div id="demo">
         <a href="https://b0zzw3ll.github.io/Module-1-Project-Game/" target="_blank">Here</a>
