--- a/views/gameinfo.html
+++ b/views/gameinfo.html
@@ -10,6 +10,15 @@
     <style>@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');</style>
   </head>
   <body>
+
+    <nav id="nav-bar">
+      <ul>
+        <li><a href="../index.html" >Home</a></li>
+        <li><a href="../views/aboutme.html">About Me</a></li>
+        <li><a href="../views/demo.html">The Demo</a></li>
+      </ul>
+    </nav>
+
       <h1><u>BreanZ BreakFast:</u></h1>
 
       <div id="what-is-it">
@@ -28,6 +37,8 @@
       <div id="mistakes">
         <div>
           <h2>Mistakes:</h2>
+          <p>I chase this one far too long...</p>
+          <img src="../img/mistake.png" class="img-fluid" alt="Responsive image">
         </div>
       </div>
 
