--- a/css/style.css
+++ b/css/style.css
@@ -1,177 +1,368 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: rgba(0, 0, 0, 0.879);
+
+@media (min-width:1px) and (max-width: 749px) {
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0.879);
+    }
+
+    h1 {
+        font-family: 'Special Elite', cursive;
+        font-size: 64px;
+        color: antiquewhite;
+        text-align: center;
+        margin-top: 300px;
+        margin-bottom: 40px;
+    }
+
+    h2 {
+        font-family: 'Special Elite', cursive;
+        font-size: 64px;
+        color: antiquewhite;
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
+
+    h4 {
+        font-family:'Courier New', Courier, monospace;
+        color: antiquewhite;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    h5 {
+        font-family:'Courier New', Courier, monospace;
+        color: antiquewhite;
+        text-align: center;
+    }
+
+    p {
+        font-family:'Courier New', Courier, monospace;
+        color: white;
+        text-align: center;
+    }
+
+    #page-links {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: 300px;
+    }
+
+    #page-links ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        list-style: none;
+        height: 300px;
+    }
+
+    #page-links a {
+        font-size: 28px;
+        border: 4px solid rgba(227, 214, 214, 0.846);
+        border-radius: 5px;
+        color: rgba(227, 214, 214, 0.846);
+        padding: 10px 20px 10px 20px;
+        background-color: rgba(249, 246, 246, 0.112);
+        box-shadow: 2px 4px 8px 8px #000000;
+        font-family: 'Special Elite', cursive;
+    }
+
+    #page-links a:hover {
+        box-shadow: 2px 4px 8px 8px #ffffffb0;
+        border: 8px solid rgba(227, 214, 214, 0.846);
+        font-weight: 700;
+        text-decoration: none;
+    }
+
+    #nav-bar {
+        display: flex;
+        justify-content: center;
+        padding-top: 10px;
+        background-color: #000000;
+    }
+
+    #nav-bar ul {
+        display: flex;
+        justify-content: space-around;
+        width: 400px;
+        list-style: none;
+    }
+
+    #nav-bar a {
+        color: antiquewhite;
+        font-family: 'Special Elite', cursive;
+        text-decoration: none;
+        border: 2px solid rgba(227, 214, 214, 0.846);
+        border-radius: 4px;
+        padding: 5px 10px 5px 10px;
+        box-shadow: 1px 1px 5px 1px #ffffffb0;
+    }
+
+    #map-image img {
+        margin-bottom: 80px;
+    }
+
+    #map-image img:hover {
+        transform: scale(2.0);
+    }
+
+    .image img {
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.549);
+    }
+
+    .image img:hover {
+    transform: scale(1.5);
+    }
+
+    .images {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .images img {
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.846);
+        width: 200px;
+    }
+
+    #img-1, #img-3, #img-5, #img-9, #img-11 {
+        transform: rotate(20deg);
+    }
+
+    #img-2, #img-4, #img-7, #img-8, #img-10 {
+        transform: rotate(-15deg);
+    }
+
+    .image-right:hover {
+        transform: rotate(-20deg) scale(1.5);
+    }
+
+    .image-left:hover {
+        transform: rotate(15deg) scale(1.5);
+    }
+
+    #middle-section {
+        text-align: center;
+    }
+
+    #middle-section img {
+        height: 250px;
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.846);
+    }
+    #middle-section img:hover {
+        transform: scale(1.2);
+    }
+
+    #joy-header {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    #img-6 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #img-6:hover {
+        transform: rotate(20deg) scale(1.5);
+    }
+
+    #img p:hover {
+        transform: rotate(0deg);
+    }
+
+    #cook-header {
+        padding-top: 20px;
+        padding-bottom: 40px;
+    }
+    
 }
 
-h1 {
-    font-family: 'Special Elite', cursive;
-    font-size: 84px;
-    color: antiquewhite;
-    text-align: center;
-    margin-top: 300px;
-    margin-bottom: 40px;
-}
 
-h2 {
-    font-family: 'Special Elite', cursive;
-    font-size: 64px;
-    color: antiquewhite;
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
-}
+@media (min-width:750px) {
 
-h4 {
-    font-family:'Courier New', Courier, monospace;
-    color: antiquewhite;
-    text-align: center;
-    margin-bottom: 10px;
-}
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0.879);
+    }
 
-h5 {
-    font-family:'Courier New', Courier, monospace;
-    color: antiquewhite;
-    text-align: center;
-}
+    h1 {
+        font-family: 'Special Elite', cursive;
+        font-size: 84px;
+        color: antiquewhite;
+        text-align: center;
+        margin-top: 300px;
+        margin-bottom: 40px;
+    }
 
-p {
-    font-family:'Courier New', Courier, monospace;
-    color: white;
-    text-align: center;
-}
+    h2 {
+        font-family: 'Special Elite', cursive;
+        font-size: 64px;
+        color: antiquewhite;
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 40px;
+    }
 
-#page-links {
-    display: flex;
-    justify-content: center;
-}
+    h4 {
+        font-family:'Courier New', Courier, monospace;
+        color: antiquewhite;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 
-ul {
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
-    width: 800px;
-}
+    h5 {
+        font-family:'Courier New', Courier, monospace;
+        color: antiquewhite;
+        text-align: center;
+    }
 
-#page-links a {
-    font-size: 28px;
-    border: 4px solid rgba(227, 214, 214, 0.846);
-    border-radius: 5px;
-    color: rgba(227, 214, 214, 0.846);
-    padding: 10px 20px 10px 20px;
-    background-color: rgba(249, 246, 246, 0.112);
-    box-shadow: 2px 4px 8px 8px #000000;
-    font-family: 'Special Elite', cursive;
-}
+    p {
+        font-family:'Courier New', Courier, monospace;
+        color: white;
+        text-align: center;
+    }
 
-#page-links a:hover {
-    box-shadow: 2px 4px 8px 8px #ffffffb0;
-    border: 8px solid rgba(227, 214, 214, 0.846);
-    font-weight: 700;
-    text-decoration: none;
-}
+    #page-links {
+        display: flex;
+        justify-content: center;
+    }
 
-#nav-bar {
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 10px;
-    background-color: #000000;
-}
+    ul {
+        display: flex;
+        justify-content: space-evenly;
+        list-style: none;
+        width: 800px;
+    }
 
-#nav-bar ul {
-    display: flex;
-    justify-content: space-around;
-    width: 400px;
-}
+    #page-links a {
+        font-size: 28px;
+        border: 4px solid rgba(227, 214, 214, 0.846);
+        border-radius: 5px;
+        color: rgba(227, 214, 214, 0.846);
+        padding: 10px 20px 10px 20px;
+        background-color: rgba(249, 246, 246, 0.112);
+        box-shadow: 2px 4px 8px 8px #000000;
+        font-family: 'Special Elite', cursive;
+    }
 
-#nav-bar a {
-    color: antiquewhite;
-    font-family: 'Special Elite', cursive;
-    text-decoration: none;
-    border: 2px solid rgba(227, 214, 214, 0.846);
-    border-radius: 4px;
-    padding: 5px 10px 5px 10px;
-    box-shadow: 1px 1px 5px 1px #ffffffb0;
-}
+    #page-links a:hover {
+        box-shadow: 2px 4px 8px 8px #ffffffb0;
+        border: 8px solid rgba(227, 214, 214, 0.846);
+        font-weight: 700;
+        text-decoration: none;
+    }
 
-#map-image img {
-    margin-bottom: 80px;
-}
+    #nav-bar {
+        display: flex;
+        justify-content: flex-end;
+        padding-top: 10px;
+        background-color: #000000;
+    }
 
-#map-image img:hover {
-    transform: scale(4.0);
-}
+    #nav-bar ul {
+        display: flex;
+        justify-content: space-around;
+        width: 400px;
+    }
 
-.image img {
-    border-radius: 25px;
-    border: 6px solid rgba(227, 214, 214, 0.549);
-}
+    #nav-bar a {
+        color: antiquewhite;
+        font-family: 'Special Elite', cursive;
+        text-decoration: none;
+        border: 2px solid rgba(227, 214, 214, 0.846);
+        border-radius: 4px;
+        padding: 5px 10px 5px 10px;
+        box-shadow: 1px 1px 5px 1px #ffffffb0;
+    }
 
-.image img:hover {
-   transform: scale(1.5);
-}
+    #map-image img {
+        margin-bottom: 80px;
+    }
 
-.images {
-    display: flex;
-    justify-content: space-around;
-}
+    #map-image img:hover {
+        transform: scale(4.0);
+    }
 
-.images img {
-    border-radius: 25px;
-    border: 6px solid rgba(227, 214, 214, 0.846);
-    width: 200px;
-}
+    .image img {
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.549);
+    }
 
-#img-1, #img-3, #img-5, #img-9, #img-11 {
-    transform: rotate(20deg);
-}
+    .image img:hover {
+    transform: scale(1.5);
+    }
 
-#img-2, #img-4, #img-7, #img-8, #img-10 {
-    transform: rotate(-15deg);
-}
+    .images {
+        display: flex;
+        justify-content: space-around;
+    }
 
-.image-right:hover {
-    transform: rotate(-20deg) scale(1.5);
-}
+    .images img {
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.846);
+        width: 200px;
+    }
 
-.image-left:hover {
-    transform: rotate(15deg) scale(1.5);
-}
+    #img-1, #img-3, #img-5, #img-9, #img-11 {
+        transform: rotate(20deg);
+    }
 
-#middle-section {
-    text-align: center;
-}
+    #img-2, #img-4, #img-7, #img-8, #img-10 {
+        transform: rotate(-15deg);
+    }
 
-#middle-section img {
-    height: 400px;
-    border-radius: 25px;
-    border: 6px solid rgba(227, 214, 214, 0.846);
-}
-#middle-section img:hover {
-    transform: scale(2.0);
-}
+    .image-right:hover {
+        transform: rotate(-20deg) scale(1.5);
+    }
 
-#joy-header {
-    margin-top: 20px;
-    margin-bottom: 30px;
-}
+    .image-left:hover {
+        transform: rotate(15deg) scale(1.5);
+    }
 
-#img-6 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+    #middle-section {
+        text-align: center;
+    }
 
-#img-6:hover {
-    transform: rotate(20deg) scale(1.5);
-}
+    #middle-section img {
+        height: 400px;
+        border-radius: 25px;
+        border: 6px solid rgba(227, 214, 214, 0.846);
+    }
+    #middle-section img:hover {
+        transform: scale(2.0);
+    }
 
-#img p:hover {
-    transform: rotate(0deg);
-}
+    #joy-header {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
 
-#cook-header {
-    padding-top: 20px;
-    padding-bottom: 40px;
+    #img-6 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #img-6:hover {
+        transform: rotate(20deg) scale(1.5);
+    }
+
+    #img p:hover {
+        transform: rotate(0deg);
+    }
+
+    #cook-header {
+        padding-top: 20px;
+        padding-bottom: 40px;
+    }
+
 }
